[gd_scene load_steps=3 format=3 uid="uid://bqpy3rndhqrk2"]

[ext_resource type="Script" uid="uid://dlibbop55b425" path="res://TilesetSelection.gd" id="1_tileset_selection"]
[ext_resource type="Theme" uid="uid://be8grmawpb7cm" path="res://theme/default_theme.tres" id="2_theme"]

[node name="TilesetSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_tileset_selection")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.917088, 0.924742, 0.951498, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 60.0
offset_right = -60.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitlePanel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 0

[node name="Title" type="Label" parent="VBoxContainer/TitlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Select Tileset"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleSpacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 3

[node name="TilesetButton0" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
text = "Green Classic"

[node name="TilesetPreview0" type="TextureRect" parent="VBoxContainer/GridContainer/TilesetButton0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 1

[node name="TilesetButton1" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
text = "Blue Modern"

[node name="TilesetPreview1" type="TextureRect" parent="VBoxContainer/GridContainer/TilesetButton1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 1

[node name="TilesetButton2" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
text = "Red Bold"

[node name="TilesetPreview2" type="TextureRect" parent="VBoxContainer/GridContainer/TilesetButton2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 1

[node name="TilesetButton3" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
disabled = true
text = "Coming Soon"

[node name="TilesetButton4" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
disabled = true
text = "Coming Soon"

[node name="TilesetButton5" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
disabled = true
text = "Coming Soon"

[node name="BottomSpacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
